--- a/pom.xml
+++ b/pom.xml
@@ -21,11 +21,11 @@
   	</properties>
 
 		<dependencies>
-		  <dependency>
-		      <groupId>com.google.code.gson</groupId>
-		      <artifactId>gson</artifactId>
-		      <version>2.10.1</version>
-		  </dependency>
+            <dependency>
+                <groupId>org.yaml</groupId>
+                <artifactId>snakeyaml</artifactId>
+                <version>2.0</version>
+            </dependency>            
             <dependency>
 				<groupId>org.slf4j</groupId>
 				<artifactId>slf4j-api</artifactId>
